--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Zoneminder\n"
 "Report-Msgid-Bugs-To: https://github.com/petegallagher/plugin.video.zoneminder/issues/\n"
-"POT-Creation-Date: 2019-01-17\n"
-"PO-Revision-Date: 2019-01-17\n"
+"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -42,7 +42,11 @@ msgid "Frames per second (max)"
 msgstr ""
 
 msgctxt "#31006"
-msgid "Default View"
+msgid "ZM path"
+msgstr ""
+
+msgctxt "#31007"
+msgid "CGI Path"
 msgstr ""
 
 #
