--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
+v2.0.2 (2020-02-19)
+- Add support for new Zoneminder API v2.0 (introduced in v1.34 of Zoneminder)
+
 v2.0.1 (2019-11-04)
 - Allow modification of cgi-bin path, requires change to base URL
+- Support ZM v1.34 API
 
 v2.0.0 (2019-01-17)
 - initial version
